[package]
name = "input-handle"
version = "0.1.0"
authors = ["Kaneyuki Hiromasa <matsugen2511@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amethyst = {git = "https://github.com/amethyst/amethyst.git"}
log= "0.4.8"

[features]
default=[]
debug=[]
